# MTC-object-tracker

./: .gitignore  README.md  app.py  mosse.py  pyproject.toml  screenshot.py  target_mouse.py  tk.py
algorithms/: __init__.py  boosting.py  csrt.py  goturn.py  kcf.py  medianflow.py  mosse.py  tld.py  tracker.py
bad/: CSRT.py  CamShift.py  KCF.py  target_mouse_slow.py
bad_algs/: MOSSE.py
