[project]
name = "fpv-drone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=10.0.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydirectinput-rgx>=2.1.2",
    "pywin32>=310",
]
